# pocketsphinx_experiments

./: CMakeLists.txt
cmake/: CMakeLists.txt
cmake/Modules/: FindSphinxBase.cmake
src/: hello_ps.c
src/include/: PSExample.h.in
